# Todo-App

./: .gitignore  app.py  pyproject.toml
static/css/: main.css
templates/: base.html  index.html  update.html
