[tool.poetry]
name = "todo app"
version = "0.1.0"
description = ""
authors = ["Nishant Sapkota"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-PyMongo = {extras = ["srv"], version = "^2.3.0"}
python-dotenv = "^0.19.0"
PythonDNS = "^0.1"
mongo = {extras = ["srv"], version = "^3.12.0"}

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
